--- a/.github/workflows/CreatePackageVersion.yml
+++ b/.github/workflows/CreatePackageVersion.yml
@@ -68,7 +68,7 @@ jobs:
   createPackageVersion:
     runs-on: ubuntu-latest
     container:
-      image: jfgarcia268/vlocity_sfdx:core
+      image: jfgarcia268/vlocity_sfdx:core-sf-cli
     steps:  
       - uses: actions/checkout@v3
         with:
