--- a/.github/workflows/CreatePackageVersion.yml
+++ b/.github/workflows/CreatePackageVersion.yml
@@ -85,7 +85,7 @@ jobs:
           echo "SKIP_VALIDATION: ${SKIP_VALIDATION}"
           echo "PACKAGE_NAME: ${PACKAGE_NAME}""
           echo "WAIT: ${WAIT}""
-          sf auth jwt grant --clientid ${{ secrets.DEVHUB_clientid }}  --jwtkeyfile server.key --username ${{ secrets.DEVHUB_USERNAME }} --instanceurl https://login.salesforce.com --setalias DEVHUB
+          sf auth jwt grant --client-id ${{ secrets.DEVHUB_clientid }}  --jwt-key-file server.key --username ${{ secrets.DEVHUB_USERNAME }} --instance-url https://login.salesforce.com --alias DEVHUB
           COMMAND="sf package version create -p ${PACKAGE_NAME} -d "force-app-${PACKAGE_NAME}" --installation-key ${{ secrets.PACKAGES_KEY }}  --wait ${WAIT} --target-hub-org DEVHUB --verbose"      
           if ${RUN_APEX_TESTS}; then
             echo "Adding Code Coverage" 
