--- a/.github/workflows/GetLimits.yml
+++ b/.github/workflows/GetLimits.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Get DevHub Limits
         run: |
           echo "${{ secrets.RSA_PRIVATE_KEY }}"   > server.key
-          sfdx auth:jwt:grant --clientid ${{ secrets.DEVHUB_clientid }}  --jwtkeyfile server.key --username demo.org@communications-b2c.1677243042259 --instanceurl https://login.salesforce.com --setalias DEVHUB
-          sfdx force:limits:api:display --target-org DEVHUB
+          sf auth jwt grant --client-id ${{ secrets.DEVHUB_clientid }}  --jwt-key-file server.key --username ${{ secrets.DEVHUB_USERNAME }} --instance-url https://login.salesforce.com --alias DEVHUB
+          sf limits api display --target-org DEVHUB
