--- a/.github/workflows/GetPackagesList.yml
+++ b/.github/workflows/GetPackagesList.yml
@@ -40,7 +40,7 @@ jobs:
   getDevHubLimits:
     runs-on: ubuntu-latest
     container:
-      image: jfgarcia268/vlocity_sfdx:vlocity_sfdx:core-sf-cli
+      image: jfgarcia268/vlocity_sfdx:core-sf-cli
     steps:  
       - uses: actions/checkout@v3
         with:
