Update name getPackageList

--- a/.github/workflows/GetPackagesList.yml
+++ b/.github/workflows/GetPackagesList.yml
@@ -37,7 +37,7 @@ on:
       
 
 jobs:
-  getDevHubLimits:
+  getPackageList:
     runs-on: ubuntu-latest
     container:
       image: jfgarcia268/vlocity_sfdx:core-sf-cli
