--- a/.github/workflows/InstallPackage.yml
+++ b/.github/workflows/InstallPackage.yml
@@ -27,7 +27,7 @@ jobs:
   InstallPackages:
     runs-on: ubuntu-latest
     container:
-      image: jfgarcia268/vlocity_sfdx:core
+      image: jfgarcia268/vlocity_sfdx:core-sf-cli
     steps:  
     - uses: actions/checkout@v3
       with:
@@ -35,7 +35,7 @@ jobs:
     - name: Login DevHub
       run: |
         echo "${{ secrets.RSA_PRIVATE_KEY }}"   > server.key
-        sfdx auth:jwt:grant --clientid ${{ secrets.DEVHUB_clientid }}  --jwtkeyfile server.key --username demo.org@communications-b2c.1677243042259 --instanceurl https://login.salesforce.com --setalias DEVHUB
+        sf auth jwt grant --client-id ${{ secrets.DEVHUB_clientid }}  --jwt-key-file server.key --username ${{ secrets.DEVHUB_USERNAME }} --instance-url https://login.salesforce.com --alias DEVHUB
     - name: Core - Install Salesforce Package
       run: |
         sfdx auth:jwt:grant --clientid ${{ secrets.DEVHUB_clientid }}  --jwtkeyfile server.key --username ${{ inputs.sousername }} --instanceurl ${{ inputs.sourl }} --setalias SO_ALIAS
