--- a/.github/workflows/CodeCI.yml
+++ b/.github/workflows/CodeCI.yml
@@ -25,6 +25,7 @@ jobs:
         DEVHUB_clientid: ${{ secrets.DEVHUB_clientid }}
         RSA_PRIVATE_KEY: ${{ secrets.RSA_PRIVATE_KEY }}
         PACKAGES_KEY: ${{ secrets.PACKAGES_KEY }}
+        DEVHUB_USERNAME: ${{ secrets.DEVHUB_USERNAME }}
 #  CodeScan:
 #    needs: GetBranchName
 #    runs-on: ubuntu-latest
