--- a/.github/workflows/InstallReleaseSandbox.yml
+++ b/.github/workflows/InstallReleaseSandbox.yml
@@ -16,7 +16,7 @@ jobs:
   InstallPackages:
     runs-on: ubuntu-latest
     container:
-      image: jfgarcia268/vlocity_sfdx:core
+      image: jfgarcia268/vlocity_sfdx:core-sf-cli
     steps:  
     - uses: actions/checkout@v3
       with:
@@ -36,29 +36,29 @@ jobs:
       run: |
         echo "${{ secrets.RSA_PRIVATE_KEY }}"   > server.key
         echo "### Login DevHub"
-        sfdx auth:jwt:grant --clientid ${{ secrets.DEVHUB_clientid }}  --jwtkeyfile server.key --username demo.org@communications-b2c.1677243042259 --instanceurl https://login.salesforce.com --setalias DEVHUB
+        sf auth jwt grant --client-id ${{ secrets.DEVHUB_clientid }}  --jwt-key-file server.key --username ${{ secrets.DEVHUB_USERNAME }} --instance-url https://login.salesforce.com --alias DEVHUB
         echo "### Login To Org"
-        sfdx auth:jwt:grant --clientid ${{ secrets[steps.setup_variables.outputs.CLIENT_ID] }}  --jwtkeyfile server.key --username ${{ secrets[steps.setup_variables.outputs.USERNAME] }} --instanceurl https://test.salesforce.com --setalias SANDBOX_ALIAS
-        sfdx org:list
+        sf auth jwt grant --client-id ${{ secrets[steps.setup_variables.outputs.CLIENT_ID] }}  --jwt-key-file server.key --username ${{ secrets[steps.setup_variables.outputs.USERNAME] }} --instance-url https://test.salesforce.com --alias SANDBOX_ALIAS
+        sf org list
     - name: Core - Install Salesforce Package
       run: |
-        sfdx org:list
+        sf org list
         ./scripts/bash/Get_Latest_Version_Package.sh DEVHUB core
         PACKAGE_ID=$(cat core_PID.txt)
         echo "PACKAGE_ID:${PACKAGE_ID}"
-        sfdx package:install --package ${PACKAGE_ID} --target-org SANDBOX_ALIAS --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
+        sf package install --package ${PACKAGE_ID} --target-org SANDBOX_ALIAS --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
     - name: App1 - Install Salesforce Package
       run: |
-        sfdx org:list
+        sf org list
         ./scripts/bash/Get_Latest_Version_Package.sh DEVHUB App1
         PACKAGE_ID=$(cat App1_PID.txt)
         echo "PACKAGE_ID:${PACKAGE_ID}"
-        sfdx package:install --package ${PACKAGE_ID} --target-org SANDBOX_ALIAS --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
+        sf package install --package ${PACKAGE_ID} --target-org SANDBOX_ALIAS --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
     - name: App2 - Install Salesforce Package
       run: |
-        sfdx org:list
+        sf org list
         ./scripts/bash/Get_Latest_Version_Package.sh DEVHUB App2
         PACKAGE_ID=$(cat App2_PID.txt)
         echo "PACKAGE_ID:${PACKAGE_ID}"
-        sfdx package:install --package ${PACKAGE_ID} --target-org SANDBOX_ALIAS --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
+        sf package install --package ${PACKAGE_ID} --target-org SANDBOX_ALIAS --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
 
