Update Script Go-Live

--- a/.github/workflows/Golive.yml
+++ b/.github/workflows/Golive.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Login DevHub
       run: |
         echo "${{ secrets.RSA_PRIVATE_KEY }}"   > server.key
-        sfdx auth:jwt:grant --clientid ${{ secrets.DEVHUB_clientid }}  --jwtkeyfile server.key --username demo.org@communications-b2c.1677243042259 --instanceurl https://login.salesforce.com --setalias DEVHUB
+        sf auth jwt grant --client-id ${{ secrets.DEVHUB_clientid }}  --jwt-key-file server.key --username ${{ secrets.DEVHUB_USERNAME }} --instance-url https://login.salesforce.com --alias DEVHUB
     - name: Get Latest Package Version Info
       id: get_packages_id
       run: |
@@ -58,34 +58,34 @@ jobs:
       run: |
         PACKAGE_ID_CORE=${{ steps.get_packages_id.outputs.PACKAGE_ID_CORE }} 
         echo "# Promoting Core - PACKAGE_ID_CORE: ${PACKAGE_ID_CORE}"
-        sfdx package:version:promote --noprompt --package ${PACKAGE_ID_CORE} --target-hub-org DEVHUB        
+        sf package version promote --no-prompt --package ${PACKAGE_ID_CORE} --target-dev-hub DEVHUB        
     - name: Promote App1
       if: ${{ steps.get_packages_id.outputs.PACKAGE_IS_RELEASED_App1 == 'false' }} 
       run: |
         PACKAGE_ID_App1=${{ steps.get_packages_id.outputs.PACKAGE_ID_App1 }} 
         echo "# Promoting App1 - PACKAGE_ID_App1: ${PACKAGE_ID_App1}"
-        sfdx package:version:promote --noprompt --package ${PACKAGE_ID_App1} --target-hub-org DEVHUB
+        sf package version promote --no-prompt --package ${PACKAGE_ID_App1} --target-dev-hub DEVHUB
     - name: Promote App2
       if: ${{ steps.get_packages_id.outputs.PACKAGE_IS_RELEASED_App2 == 'false' }} 
       run: |
         PACKAGE_ID_App2=${{ steps.get_packages_id.outputs.PACKAGE_ID_App2 }} 
         echo "# Promoting App2 - PACKAGE_ID_App2: ${PACKAGE_ID_App2}"
-        sfdx package:version:promote --noprompt --package ${PACKAGE_ID_App2} --target-hub-org DEVHUB       
+        sf package version promote --no-prompt --package ${PACKAGE_ID_App2} --target-dev-hub DEVHUB       
     - name: Install Core
       run: |
         PACKAGE_ID_CORE=${{ steps.get_packages_id.outputs.PACKAGE_ID_CORE }} 
         echo "# Installing Core - PACKAGE_ID_CORE: ${PACKAGE_ID_CORE}"
-        sfdx package:install --package ${PACKAGE_ID_CORE} --target-org DEVHUB --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
+        sf package install --package ${PACKAGE_ID_CORE} --target-org DEVHUB --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
     - name: Install App1
       run: |
         PACKAGE_ID_App1=${{ steps.get_packages_id.outputs.PACKAGE_ID_App1 }} 
         echo "# Installing App1 - PACKAGE_ID_App1: ${PACKAGE_ID_App1}"
-        sfdx package:install --package ${PACKAGE_ID_App1} --target-org DEVHUB --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
+        sf package install --package ${PACKAGE_ID_App1} --target-org DEVHUB --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
     - name: Install App2
       run: |
         PACKAGE_ID_App2=${{ steps.get_packages_id.outputs.PACKAGE_ID_App2 }} 
         echo "# Installing App2 - PACKAGE_ID_App2: ${PACKAGE_ID_App2}"
-        sfdx package:install --package ${PACKAGE_ID_App2} --target-org DEVHUB --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
+        sf package install --package ${PACKAGE_ID_App2} --target-org DEVHUB --wait 1000 --publish-wait 1000 --security-type AdminsOnly --installation-key ${{ secrets.PACKAGES_KEY }}
 
 
 
