--- a/.github/workflows/Golive.yml
+++ b/.github/workflows/Golive.yml
@@ -11,7 +11,7 @@ jobs:
     if: ${{ github.event.pull_request.merged == true }} 
     runs-on: ubuntu-latest
     container:
-      image: jfgarcia268/vlocity_sfdx:core
+      image: jfgarcia268/vlocity_sfdx:core-sf-cli
     steps:  
     - uses: actions/checkout@v3
       with:
