--- a/.github/workflows/BuildTestScratchOrg.yml
+++ b/.github/workflows/BuildTestScratchOrg.yml
@@ -16,7 +16,7 @@ jobs:
     needs: GetBranchName
     runs-on: ubuntu-latest
     container:
-      image: jfgarcia268/vlocity_sfdx:core
+      image: jfgarcia268/vlocity_sfdx:core-sf-cli
     steps:  
     - uses: actions/checkout@v3
       with:
@@ -24,17 +24,17 @@ jobs:
     - name: Login DevHub
       run: |
           echo "${{ secrets.RSA_PRIVATE_KEY }}"   > server.key
-          sfdx auth:jwt:grant --clientid ${{ secrets.DEVHUB_clientid }}  --jwtkeyfile server.key --username demo.org@communications-b2c.1677243042259 --instanceurl https://login.salesforce.com --setalias DEVHUB
+          sf auth jwt grant --client-id ${{ secrets.DEVHUB_clientid }}  --jwt-key-file server.key --username ${{ secrets.DEVHUB_USERNAME }} --instance-url https://login.salesforce.com --alias DEVHUB
     - name: Create Scratch Org
       id: create_so
       run: |
-        sfdx force:org:create --definitionfile config/project-scratch-def.json -a ALIAS --durationdays 29 --target-dev-hub DEVHUB
-        sfdx force:user:password:generate --target-org ALIAS --target-dev-hub DEVHUB
+        sf org create scratch --definition-file config/project-scratch-def.json --alias ALIAS --duration-days 29 --target-dev-hub DEVHUB
+        sf org generate password --target-org ALIAS --target-dev-hub DEVHUB
         if [ -f org.info ]; then
           rm org.info  
         fi
-        sfdx org:display --target-org ALIAS --verbose  >> org.info
-        sfdx org:display --target-org ALIAS --verbose --json >> credential.json
+        sf org display --target-org ALIAS --verbose  >> org.info
+        sf org display --target-org ALIAS --verbose --json >> credential.json
         SO_Password=$( jq -r  '.result.password' credential.json) 
         SO_User_Name=$( jq -r  '.result.username' credential.json) 
         SO_URL=$( jq -r  '.result.instanceUrl' credential.json) 
