--- a/.github/workflows/BuildTestScratchOrg.yml
+++ b/.github/workflows/BuildTestScratchOrg.yml
@@ -29,7 +29,7 @@ jobs:
       id: create_so
       run: |
         sf org create scratch --definition-file config/project-scratch-def.json --alias ALIAS --duration-days 29 --target-dev-hub DEVHUB
-        sf org generate password --target-org ALIAS --target-dev-hub DEVHUB
+        sf org generate password --target-org ALIAS
         if [ -f org.info ]; then
           rm org.info  
         fi
