--- a/.github/workflows/InstallPackage.yml
+++ b/.github/workflows/InstallPackage.yml
@@ -22,6 +22,8 @@ on:
         required: true
       PACKAGES_KEY:
         required: true
+      DEVHUB_USERNAME:
+        required: true
 
 jobs:
   InstallPackages:
